Fix for overflow on ios

--- a/recipes/static/scss/_common.scss
+++ b/recipes/static/scss/_common.scss
@@ -52,6 +52,8 @@ img {
 
 .no-overflow {
     overflow: hidden !important;
+    position: relative;
+    height: 100%;
 }
 
 .opacity-50 {
